<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Atom - Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UI Kit</string>
    <string name="nav_header_subtitle">Multi-Purpose Starter \nTemplate for Android</string>
    <string name="nav_header_button">Purchase Now</string>
    <string name="action_settings">Settings</string>
    <string name="base_title"><b>Atom</b>UI</string>
    <string name="app_full_title">Atom UI Kit</string>
    <string name="image_desc_icon">Icon</string>
    <string name="image_desc_bg">Background</string>
    <string name="image_desc_avatar">Avatar</string>
    <string name="left_menu_header">Header</string>
    <string name="left_menu_lists">List Views</string>
    <string name="left_menu_cards">Cards</string>
    <string name="left_menu_parallax">Parallax</string>
    <string name="left_menu_login">Login Pages</string>
    <string name="left_menu_register">Register Pages</string>
    <string name="left_menu_forgot_pass">Forgot Password Pages</string>
    <string name="left_menu_old_new_pass">Old/New Password Pages</string>
    <string name="left_menu_search">Search Bars</string>
    <string name="left_menu_image_gallery">Image Gallery</string>
    <string name="left_menu_splash">Splash Screen</string>
    <string name="left_menu_radio">Radio Button</string>
    <string name="left_menu_checkbox">Checkbox</string>
    <string name="left_menu_toggle">Toggle</string>
    <string name="left_menu_timeline">Timeline</string>
    <string name="left_menu_small_components">Typo + Small components</string>
    <string name="left_menu_wizard">Wizard / On boarding</string>
    <string name="left_menu_color">RTL + Color Change</string>
    <string name="left_menu_tab">Tabs</string>
    <string name="left_menu_range">Range</string>
    <string name="left_menu_select">Select</string>
    <string name="home_subtitle_1">50+ Screen templates</string>
    <string name="home_title">True <b>Multi-Purpose</b> \nAndroid Template</string>
    <string name="home_subtitle_2">Design files</string>
    <string name="home_text_1">Design files are included in package. Work with you designer in any design software (Sketch, Adobe Xd, Photoshop, or Figma)</string>
    <string name="home_subtitle_3">Documentation</string>
    <string name="home_text_2">Constantly updated, well written and organised online documentation.</string>
    <string name="home_subtitle_4">List of useful features</string>
    <string name="home_button_text">Visit docs</string>
    <string name="home_subtitle_5">Visit our website</string>
    <string name="home_desc">Speed up your projects with DevsPush themes, templates &amp; tutorials. We are specialized in creating beautiful resources on Ionic, Android &amp; Flutter platforms with Sketch, Photoshop, Adobe Xd &amp; Figma resources files.</string>
    <string name="home_list_text_1">Firebase Integration</string>
    <string name="home_list_text_2">Responsive</string>
    <string name="home_list_text_3">6 colors combinations</string>
    <string name="home_list_text_4">PWA ready</string>
    <string name="dev_push_site">Devspush.com</string>
    <string name="expandable">Expandable</string>
    <string name="expandable_list_big_image">Expandable</string>
    <string name="drag_drop">Drag and Drop</string>
    <string name="drag_drop_small_item_header">Small item + header</string>
    <string name="swipe_to_dismiss">Swipe to dismiss</string>
    <string name="swipe_button">Swipe Button</string>
    <string name="swipe_icons">Swipe Icons</string>
    <string name="google_cards">Google Cards</string>
    <string name="styled_cards">Social - Simple</string>
    <string name="styled_cards_3">Social - Author</string>
    <string name="full_image_cards">Social - Image Background</string>
    <string name="full_cards_avatar">eCommerce - Simple</string>
    <string name="shopping_cards">eCommerce - Shopping Cart Card</string>
    <string name="cards_category">eCommerce - Category</string>
    <string name="cards_image">eCommerce - Image Card</string>
    <string name="cards_social">Social - Color Card</string>
    <string name="social_thumb_card">Social - Thumb Card</string>
    <string name="e_commerce_thumb">eCommerce - Thumb</string>
    <string name="list_clicked_item_text">Item clicked! (position = %1$d)</string>
    <string name="list_button_text_1">Message</string>
    <string name="list_button_text_2">Following</string>
    <string name="list_button_text_3">Read more</string>
    <string name="list_button_text_4">Purchase</string>
    <string name="list_button_text_5">Follow</string>
    <string name="on_comment_click">Comment clicked</string>
    <string name="on_button_click">Button clicked</string>
    <string name="shopping_cart_value">%d %s</string>
    <string name="image_gallery_categories">Gallery</string>
    <string name="image_gallery_subtitle_template">%s Photos</string>
    <string name="image_gallery_categories_title">Image Gallery Categories</string>
    <string name="image_gallery_category_title">SubImage Gallery Page</string>
    <string name="image_gallery_full_image">Full Image Gallery Page</string>
    <string name="tab_bottom_text">Navigation - Bottom Text</string>
    <string name="tab_bottom_icons">Navigation - Bottom Icons</string>
    <string name="tab_top_text">Navigation - Top Text</string>
    <string name="tab_top_icons">Navigation - Top Icons</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_products">Products</string>
    <string name="tab_blog">Blog</string>
    <string name="checkbox_simple_left">Simple Left</string>
    <string name="checkbox_simple_right">Simple Right</string>
    <string name="checkbox_avatar_left">Avatar Left + Checkbox Left</string>
    <string name="checkbox_avatar_right">Avatar Left + Checkbox Right</string>
    <string name="checkbox_icon_left">Icon Left + Checkbox Left</string>
    <string name="checkbox_icon_right">Icon Left + Checkbox Right</string>
    <string name="radiobutton_simple_left">Simple Left</string>
    <string name="radiobutton_simple_right">Simple Right</string>
    <string name="radiobutton_avatar_left">Avatar Left + Radio Button Left</string>
    <string name="radiobutton_avatar_right">Avatar Left + Radio Button Right</string>
    <string name="radiobutton_icon_left">Icon Left + Radio Button Left</string>
    <string name="radiobutton_icon_right">Icon Left + Radio Button Right</string>
    <string name="search_simple">Simple</string>
    <string name="search_top_bar">Top Bar</string>
    <string name="search_placeholder">Search here</string>
    <string name="search_results">%d Results</string>
    <string name="search_content_desc">Search edit text</string>
    <string name="parallax_friends">Product</string>
    <string name="parallax_shopping">Shopping</string>
    <string name="parallax_profile">Profile</string>
    <string name="login_logo_1">Login + logo 1</string>
    <string name="register_logo_1">Register + logo 1</string>
    <string name="forgot_pass_simple">Forgot Password Simple</string>
    <string name="new_pass_with_bg">New Password With Background</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="login_text_1">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="forgot_pass_2">Forgot password</string>
    <string name="get_new">Get new</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="request_pass">Request Password</string>
    <string name="new_pass">New Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="wizard_walk_through">WalkThrough - 1</string>
    <string name="wizard_e_commerce">eCommerce</string>
    <string name="wizard_profiles">Profiles</string>
    <string name="wizard_social">Social</string>
    <string name="wizard_prev">Prev</string>
    <string name="wizard_next">Next</string>
    <string name="wizard_finish">Finish</string>
    <string name="wizard_title_one"><b>Atom</b> UI Kit</string>
    <string name="wizard_subtitle_one">Lorem ipsum dolor sit amet, consectetur \nadipiscing elit. Suspendisse a aliquam</string>
    <string name="wizard_title_two"><b>Atom</b> UI Kit</string>
    <string name="wizard_subtitle_two">Lorem ipsum dolor sit amet, consectetur \nadipiscing elit. Suspendisse a aliquam</string>
    <string name="wizard_title_three"><b>Atom</b> UI Kit</string>
    <string name="wizard_subtitle_three">Lorem ipsum dolor sit amet, consectetur \nadipiscing elit. Suspendisse a aliquam</string>
    <string name="toggle_simple">Simple</string>
    <string name="toggle_desc">Description</string>
    <string name="toggle_group">Group</string>
    <string name="all">All</string>
    <string name="small_size">Small Size</string>
    <string name="default_button">Default</string>
    <string name="medium_size">Medium Size</string>
    <string name="block">Block</string>
    <string name="block_button">A block button</string>
    <string name="rounded_small_size">Rounded Small Size</string>
    <string name="rounded_medium_size">Rounded Medium Size</string>
    <string name="rounded_block">Block</string>
    <string name="basic_chips">Basic Chips</string>
    <string name="example_name">Mildred Lucas</string>
    <string name="color_chips">Color Chips</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="tertiary">Tertiary</string>
    <string name="outline_chips">Outline Chips</string>
    <string name="icon_chips">Icon Chips</string>
    <string name="icon_chips_time">12:30 – 13:00</string>
    <string name="icon_chips_location">Brooklyn, NY</string>
    <string name="rtl_test">Rtl + Color Change Test</string>
    <string name="rtl_text">Testing our application with Rtl</string>
    <string name="activate">Activate</string>
    <string name="main_theme">Main theme</string>
    <string name="blue_green">Blue &amp; Green</string>
    <string name="purple">Purple</string>
    <string name="purple_orange">Purple &amp; Orange</string>
    <string name="orange">Orange</string>
    <string name="orange_blue">Orange &amp; Blue</string>
    <string name="teal">Teal</string>
    <string name="teal_orange">Teal &amp; Orange</string>
    <string name="red">Red</string>
    <string name="red_pink">Red &amp; Pink</string>
    <string name="green">Green</string>
    <string name="green_orange">Green &amp; Orange</string>
    <string name="splash_screen_simple">Splash Screen Simple</string>
    <string name="splash_title">AtomUI \nDevsPush</string>
    <string name="basic_range">Basic Range</string>
    <string name="icons_range">Icons Range</string>
    <string name="steps_range">With Predefined Steps Range</string>
    <string name="two_ranges">Two Sliders Range</string>
    <string name="steps_range_letter">A</string>
    <string name="range_min">1</string>
    <string name="range_max">10</string>
    <string name="multi_range_value">%d - %d</string>
    <string name="single_select">Single Select</string>
    <string name="multi_select">Multi Select</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="choose_address">Choose address</string>
</resources>