<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:background="?attr/colorBgPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPlaceHolder"
            android:layout_width="@dimen/wizard_image_size"
            android:layout_height="@dimen/wizard_image_size"
            android:layout_marginTop="@dimen/margin_ultra_ultra_large"
            android:layout_marginBottom="@dimen/margin_ultra_larger"
            android:contentDescription="@string/image_desc_bg"
            tools:src="@drawable/ic_wizard_1" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/WizardTitle"
            tools:text="@string/wizard_title_one" />

        <TextView
            android:id="@+id/tvSubtitle"
            style="@style/WizardSubTitle"
            tools:text="@string/wizard_subtitle_one" />
    </LinearLayout>
</FrameLayout>
