<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/LoginToolbarStyle"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivBack"
                    style="@style/BackButtonStyle"
                    android:contentDescription="@string/image_desc_icon"
                    android:onClick="onBackButtonClick" />

                <TextView
                    android:id="@+id/toolbarTitle"
                    style="@style/ToolbarTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/margin_ultra_larger"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/login_logo_1" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContentHeader"
                style="@style/LoginContentHeaderParentStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    style="@style/LoginLogoStyle"
                    android:contentDescription="@string/image_desc_icon" />

                <TextView
                    style="@style/LoginTitleStyle"
                    android:text="@string/login" />

                <TextView
                    style="@style/LoginSubTitleStyle"
                    android:text="@string/app_full_title" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/inputParent"
                style="@style/BaseCardViewStyle"
                app:cardElevation="@dimen/elevation_extra_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llContentHeader">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_large">

                    <TextView
                        style="@style/LoginLabelStyle"
                        android:text="@string/email" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText style="@style/LoginEditTextStyle" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        style="@style/LoginLabelStyle"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lePassLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="?attr/colorBgPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/LoginEditTextStyle"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/llButtonParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_extra_large"
                app:layout_constraintTop_toBottomOf="@+id/inputParent">

                <Button
                    android:id="@+id/btnFacebook"
                    style="@style/FacebookButtonStyle" />

                <Button
                    android:id="@+id/btnTwitter"
                    style="@style/TwitterButtonStyle" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/LoginButtonStyle"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llButtonParent" />

            <LinearLayout
                android:id="@+id/llText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin">

                <TextView
                    android:id="@+id/tvLoginText1"
                    style="@style/LoginTextStyle"
                    android:text="@string/login_text_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvLoginButton1"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvLoginButton1"
                    style="@style/LoginClickableTextStyle"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@string/sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvLoginText1"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin_extra_large"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llText1">

                <TextView
                    android:id="@+id/tvLoginText2"
                    style="@style/LoginTextStyle"
                    android:text="@string/forgot_pass" />

                <TextView
                    android:id="@+id/tvLoginButton2"
                    style="@style/LoginClickableTextStyle"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@string/get_new" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>